<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/control_view"
    tools:context=".ControlFragment">

    <TextView
        android:id="@+id/text_box_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_box_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/control_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="111dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/selected_radio_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_male" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_female"
             />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkbox_first_dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="@string/check_box_first_dose"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkbox_second_dose"
        app:layout_constraintEnd_toEndOf="@+id/selected_checkbox_button" />

    <CheckBox
        android:id="@+id/checkbox_second_dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="37dp"
        android:text="@string/check_box_second_dose"
        app:layout_constraintBottom_toTopOf="@+id/selected_checkbox_button"
        app:layout_constraintStart_toEndOf="@+id/checkbox_first_dose" />

    <ToggleButton
        android:id="@+id/simpleToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:checked="true"
        android:textOff="@string/toggle_button_android"
        android:textOn="@string/toggle_button_iPhone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/click_button"
        app:layout_constraintBottom_toBottomOf="@+id/display_textView"
        app:layout_constraintEnd_toStartOf="@+id/display_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_text_input" />

    <TextView
        android:id="@+id/display_textView"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/selected_radio_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clickButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selected_checkbox_button"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="197dp"
        android:text="@string/selected_checkbox_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/selectedCheckbox_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/selectedCheckbox_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        app:layout_constraintBottom_toBottomOf="@+id/selected_checkbox_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selected_checkbox_button"
        app:layout_constraintTop_toTopOf="@+id/selected_checkbox_button" />

    <Button
        android:id="@+id/selected_radio_button"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:text="@string/selected_radio_button"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/selected_radio_button_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="7dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/selected_radio_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toTopOf="@+id/radioGroup2" />


</androidx.constraintlayout.widget.ConstraintLayout>