...
    <string name="dialog_message">Happy Learning</string>
    <string name="positive_dialog_button">Continue</string>
    <string name="negative_dialog_button">Cancel</string>
    <string name="click_button">Click</string>
    <string name="control_label">Control View</string>
    <string name="text_box_label">Enter your name:</string>
    <string name="control_input_text">Passion</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>
    <string name="selected_radio_button">"Selected Radio Button</string>
    <string name="selected_radio_button_label">"Selected Radio Button</string>
    <string name="check_box_first_dose">First Dose</string>
    <string name="check_box_second_dose">Second Dose</string>
...
